<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/pic1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_name" />

                <TextView
                    style="@style/sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            style="@style/desc_text"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/image"
                    android:background="@drawable/maps"
                    android:onClick="navigatemaps"/>

                <TextView
                   style="@style/desc_text"
                    android:text="@string/location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    style="@style/image"
                    android:background="@drawable/call" />

                <TextView
                    style="@style/desc_text"
                    android:text="@string/telphone" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/image"
                    android:src="@drawable/info" />

                <TextView
                    style="@style/desc_text"
                    android:text="@string/info" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

